[package]
name = "neb"
version = "0.1.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2018"

[lib]
name = "neb"

[[test]]
name = "tests"

[dependencies]
libc = "*"
log = "*"
lazy_static = "*"
bifrost = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_plugins = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_hasher = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
dovahkiin = { git = "https://github.com/ShisoftResearch/Dovahkiin", branch = "develop" }
hermes = { git = "https://github.com/ShisoftResearch/Hermes.git" }
rayon = "*"
serde = "*"
serde_derive = "*"
bincode = "*"
byteorder = "*"
parking_lot = "*"
rand = "*"
linked-hash-map = "*"
bitflags = "*"
itertools = "*"
smallvec = "*"
owning_ref = "*"
num_cpus = "*"
static_assertions = "*"
serde_json = "*"

[dev-dependencies]
env_logger = "*"