[package]
name = "neb"
version = "0.2.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2018"

[lib]
name = "neb"

[dependencies]
libc = "*"
log = "*"
lazy_static = "*"
bifrost = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_plugins = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_hasher = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
dovahkiin = { path = "../Dovahkiin" }
lightning-containers = "*"
rayon = "*"
serde = "*"
serde_derive = "*"
bincode = "*"
byteorder = "*"
parking_lot = "*"
rand = { version = "*", features = ["small_rng"] }
linked-hash-map = "*"
bitflags = "*"
itertools = "*"
smallvec = { version = "*", features = ["serde", "union"] }
owning_ref = "*"
num_cpus = "*"
static_assertions = "*"
serde_json = "*"
futures = {version = "0.3", features = ["executor", "thread-pool"] }
futures-timer = "3"
async-std = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
crossbeam = "*"
crossbeam-epoch = "*"
chashmap = { version = "2.2.2", optional = true }
arrow = "3"
num = "*"

[dev-dependencies]
env_logger = "*"
rayon = "*"

[features]
default = ["fast_map"]
slow_map = ["chashmap"]
fast_map = []