[package]
name = "neb"
version = "0.2.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2021"

[lib]
name = "neb"

[dependencies]
libc = "*"
log = "*"
lazy_static = "*"
bifrost = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_plugins = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_hasher = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
dovahkiin = { git = "https://github.com/ShisoftResearch/Dovahkiin.git", branch = "develop" }
lightning-containers = { git = "ssh://git@192.168.10.134/shisoft-x/Lightning.git", branch = "develop" }
rayon = "*"
serde = "*"
serde_derive = "*"
bincode = "*"
byteorder = "*"
parking_lot = "*"
rand = { version = "*", features = ["small_rng"] }
bitflags = "*"
itertools = "*"
smallvec = { version = "*", features = ["serde", "union"] }
num_cpus = "*"
static_assertions = "*"
serde_json = "*"
futures = {version = "0.3", features = ["executor", "thread-pool"] }
futures-timer = "3"
async-std = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
crossbeam = "*"
crossbeam-epoch = "*"
arrow = "35"
num = "*"

[dev-dependencies]
env_logger = "*"
rayon = "*"